tests/whole_screen/snapshots/whole_screen__native__a_reply_taller_than_the_window_carries_its_mark_on_its_first_row_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: "crate::timeless(&everything(&window))"
---
|╭─ crucible v###### ───────────────────────────────────────────────────────────╮|
|│                                  │ Recent sessions                           │|
|│  ▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄  │                                           │|
|│  █   █▄▄ █  █ █   █ █▄█ █   █▄▄  │ No recent sessions                        │|
|│  ▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄  │                                           │|
|│                                  │ ───────────────────────────────────────── │|
|│  /…/workspace                    │                                           │|
|│                                  │ Tips                                      │|
|│                                  │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|                                                                                |
|› /usage                                                                        |
|⎿ Usage · anthropic · API key                                                   |
|                                                                                |
|  Session                                                                       |
|    Total cost       nothing asked yet                                          |
|    API time         Ns                                                         |
|    Wall time        Ns                                                         |
|    Lines changed    +0 −0                                                      |
|    Tokens           0 in · 0 out · 0 cache read · 0 cache write                |
|                                                                                |
|  Context                                                                       |
|    ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0% used  |
|                                                                                |
|  Plan limits                                                                   |
80x5 cursor 4,4 scrollback 30
|    limits not reported                                                         |
|                                                                                |
|                                                                                |
|                                                                100% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
