tests/whole_screen/snapshots/whole_screen__native__a_reply_that_wraps_carries_its_mark_and_indent_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: window.picture()
---
24x24 cursor 10,4 scrollback 0
|CRUCIBLE                |
|/…/workspace            |
|                        |
|› /login                |
|⎿ cancelled, nothing    |
|  signed in             |
|                        |
|                        |
|        100% window left|
|╭──────────────────────╮|
|│ ›                    │|
|╰──────────────────────╯|
|ask mode on             |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
|                        |
