tests/whole_screen/snapshots/whole_screen__native__a_resize_with_a_panel_open_60x24.snap
---
source: tests/whole_screen/native.rs
expression: narrower
---
60x24 cursor 23,0 scrollback 43
|fox jumps over the lazy dog. the quick brown fox jumps over |
|the lazy dog. the quick brown fox jumps over the lazy dog.  |
|the quick brown fox jumps over the lazy dog. the quick brown|
|fox jumps over the lazy dog. the quick brown fox jumps over |
|the lazy dog. the quick brown fox jumps over the lazy dog.  |
|the quick brown fox jumps over the lazy dog. the quick brown|
|fox jumps over the lazy dog. the quick brown fox jumps over |
|the lazy dog. the quick brown fox jumps over the lazy dog.  |
|done.                                                       |
|                                                            |
|› /settings                                                 |
|────────────────────────────────────────────────────────────|
|                                                            |
|Settings     Status   ‹ Config ›   Usage                    |
|                                                            |
|╭──────────────────────────────────────────────────────────╮|
|│ / to search                                              │|
|╰──────────────────────────────────────────────────────────╯|
|                                                            |
|› Theme                                                 auto|
|  ↓ 17 more                                                 |
|                                                            |
|↑↓ walk · enter changes · / search                          |
|←→ tabs · esc to close                                      |
