tests/whole_screen/snapshots/whole_screen__native__a_resize_with_a_panel_open_80x16.snap
---
source: tests/whole_screen/native.rs
expression: shorter
---
80x16 cursor 15,0 scrollback 38
|fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the   |
|quick brown fox jumps over the lazy dog. done.                                  |
|                                                                                |
|› /settings                                                                     |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Settings     Status   ‹ Config ›   Usage                                        |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ / to search                                                                  │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› Theme                                                                     auto|
|  ↓ 17 more                                                                     |
|                                                                                |
|↑↓ to walk · enter changes · / to search · ←→ tabs · esc to close               |
