tests/whole_screen/snapshots/whole_screen__native__a_row_sealed_after_narrowing_is_folded_not_clipped_in_native_mode.snap
---
source: tests/whole_screen/native.rs
assertion_line: 864
expression: window.picture()
---
40x24 cursor 21,4 scrollback 22
|│                                  │ · s|
|hift+tab  steps the permission mode    │|
|│                                  │ · c|
|trl+c     clears the line typed so far │|
|╰───────────────────────────────────────|
|───────────────────────────────────────╯|
|                                        |
|› say it                                |
|                                        |
|This row is seventy-eight cells wide:   |
|one row at eighty and two rows at forty.|
|                                        |
|anthropic: the response ended before the|
|model finished                          |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
