tests/whole_screen/snapshots/whole_screen__native__a_wheel_or_click_report_changes_nothing_in_native_mode.snap
---
source: tests/whole_screen/native.rs
assertion_line: 74
expression: window.picture()
---
80x24 cursor 21,4 scrollback 2
|│  ▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄  │                                           │|
|│  █   █▄▄ █  █ █   █ █▄█ █   █▄▄  │ No earlier session for this workspace     │|
|│  ▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄  │                                           │|
|│                                  │ ───────────────────────────────────────── │|
|│  /…/workspace                    │                                           │|
|│                                  │ Tips                                      │|
|│                                  │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› what is 2+2                                                                   |
|                                                                                |
|Two plus two is four.                                                           |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
