tests/whole_screen/snapshots/whole_screen__native__clear_divider_is_drawn_in_ascii_glyphs_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: window.picture()
---
80x24 cursor 18,4 scrollback 10
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› say something                                                                 |
|                                                                                |
|Done.                                                                           |
|                                                                                |
|› /settings                                                                     |
|+ Glyphs set to ascii                                                           |
|                                                                                |
|> /clear                                                                        |
|                                                                                |
|-- new session -----------------------------------------------------------------|
|                                                                                |
|                                                                100% window left|
|+------------------------------------------------------------------------------+|
|| >                                                                            ||
|+------------------------------------------------------------------------------+|
|ask mode on (shift+tab to cycle)                       anthropic - claude-test-1|
|                                                                                |
|                                                                                |
|                                                                                |
