tests/whole_screen/snapshots/whole_screen__native__clear_writes_one_divider_and_no_second_card_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: window.picture()
---
80x24 cursor 21,4 scrollback 5
|│                                  │ ───────────────────────────────────────── │|
|│  /…/workspace                    │                                           │|
|│                                  │ Tips                                      │|
|│                                  │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› say something                                                                 |
|                                                                                |
|Done.                                                                           |
|                                                                                |
|› /clear                                                                        |
|                                                                                |
|── new session ─────────────────────────────────────────────────────────────────|
|                                                                                |
|                                                                                |
|                                                                100% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
